--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "@sentry/react": "^10.32.1",
     "@stripe/react-stripe-js": "^5.4.1",
     "@stripe/stripe-js": "^8.6.0",
+    "@tailwindcss/forms": "^0.5.11",
+    "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-devtools": "^5.90.2",
     "@tensorflow/tfjs": "^4.22.0",
@@ -105,6 +107,7 @@
     "next-i18next": "^15.4.3",
     "next-intl": "^4.6.1",
     "next-seo": "^6.4.0",
+    "next-themes": "^0.4.6",
     "node-cache": "^5.1.2",
     "nodemailer": "^7.0.6",
     "openai": "^6.15.0",
